# SRE-agent

./: .env.example  .gitignore  CLAUDE.md  CONCEPT.md  MILESTONE.md  README.md  docker-compose.yml  pyproject.toml
agent/: Dockerfile  pyproject.toml  ssh_config
agent/app/: __init__.py  codex_runner.py  config.py  langfuse_tracer.py  logging.py  main.py  schemas.py
agent/app/mcp_tools/: qdrant_search.py  telegram_send.py
agent/codex_workdir/: AGENTS.md
agent/codex_workdir/.codex/: config.toml
agent/mcp_servers/: qdrant_search_server.py
agent/scripts/: index_runbooks.py
agent/sse_fix_proxy/: Dockerfile  app.py
config/: prometheus.yml
docs/: development-plan.md  governance.md  load-testing-report.md  product-proposal.md  system-design.md
docs/diagrams/: c4-component.md  c4-container.md  c4-context.md  data-flow.md  workflow.md
docs/guides/: add-mcp-server.md  add-provider.md  add-ssh-host.md  deploy-vllm.md  usage.md
docs/specs/: agent-registry.md  auth.md  guardrails.md  llm-gateway.md  load-testing.md  observability.md  retriever.md  serving-config.md  sre-agent.md
gateway/: custom_guardrail.py  litellm_config.yaml
playground/: Dockerfile  entrypoint.sh  requirements.txt
playground/app/: main.py
playground/stress/: cpu_stress.sh  disk_stress.sh  memory_stress.sh
registry/: Dockerfile  pyproject.toml
registry/app/: __init__.py  config.py  database.py  logging.py  main.py  models.py  schemas.py
runbooks/: cpu-high.md  disk-full.md  memory-high.md  redis-oom.md  service-down.md
scripts/: e2e_demo.sh  setup_zabbix.sh
tests/: conftest.py
tests/load/: README.md  locustfile.py
tests/unit/: test_api.py  test_codex_runner.py  test_dedup.py  (+4 more)
vllm/: Dockerfile  docker-compose.vllm.yml
(+15 files in other folders)
