[project]
name = "ai-sre-platform"
version = "0.1.0"
description = "AI-SRE Platform — infrastructure + SRE agent"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "langfuse>=2.0.0,<3.0.0",
    "litellm>=1.82.0,<1.82.7",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.21.0",
]
load = [
    "locust>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
