[project]
name = "sre-agent"
version = "0.1.0"
description = "SRE Agent for AI-SRE Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "httpx>=0.28.0",
    "langfuse>=2.0.0,<3.0.0",
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "opentelemetry-sdk>=1.0.0",
    "opentelemetry-exporter-prometheus>=0.50b0",
]
